fix styling issues with the drawer
this fixes a few styling issues with the drawer.

the first is an issue that croped up with long channel titles. they
could get weirdly squished onto two lines, breaking the alignment.

the second was that the left edge of the channel titles is supposed to
be aligned with the text in the 'Compose' and 'Home' buttons.

I also fixed a weird behavior with the `transition-delay` property I had
set to make it nicer and more consistent.

pr #2085

--- a/static/scss/drawer.scss
+++ b/static/scss/drawer.scss
@@ -27,7 +27,9 @@ $drawer-trans: width 500ms;
 .persistent-drawer-closed {
   z-index: 1;
   position: relative;
+}
 
+.persistent-drawer-hover {
   .mdc-drawer.mdc-drawer--persistent {
     transition: $drawer-trans 300ms;
   }
@@ -87,6 +89,7 @@ $drawer-trans: width 500ms;
     margin-left: $text-padding-left;
     font-size: 18px;
     word-break: break-word;
+    display: block;
   }
 
   .new-post-link-container {
@@ -147,6 +150,10 @@ $drawer-trans: width 500ms;
       font-size: 18px;
       padding: $link-padding;
       flex-grow: 1;
+
+      .title {
+        margin-left: 7px;
+      }
     }
 
     .avatar-image {
